# TTSPlayer

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/ttsplayer/: __init__.py  __main__.py  cli.py
src/ttsplayer/audio/: __init__.py  loader.py  player.py
src/ttsplayer/models/: __init__.py  track.py
src/ttsplayer/ui/: app.py
tests/: conftest.py  test_loader.py  test_player.py
