[project]
name = "ttsplayer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.6.0",
    "pygame>=2.5.2",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
]
